Fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -113,7 +113,7 @@ body {
 }
 
 .homepage-intro-container {
-  padding: 1em 0;
+  padding: 3em 0;
 }
 
 .homepage-box-container {
@@ -140,12 +140,20 @@ body {
   text-decoration: none;
 }
 
+.about-container {
+  padding-bottom: 3em;
+}
+
 .get-in-touch-item {
   list-style-type: none;
 }
 
 .team-title {
   font-style:italic;
+}
+
+.services-container {
+  padding-bottom: 1.5em;
 }
 
 .services-list > li {
